Resolved merge conflicts and merged local changes